--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 KAlarm Change Log
 
+=== Version 3.13.0 (KDE Gear 26.04) --- 9 December 2025 ===
+* Only show options for Late cancel/Reminder in Edit Alarm dialogue when they are enabled.
+
 === Version 3.12.1 (KDE Gear 25.12.1) --- 2 December 2025 ===
 * Prevent multiple Defer Alarm dialogs for the same event [KDE Bug 512828]
 * If Defer is disabled for a notification alarm, don't show two Edit buttons.
