--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 KAlarm Change Log
 
 === Version 3.13.0 (KDE Gear 26.04) --- 9 December 2025 ===
+* Provide Edit Alarm dialogue option to override notification inhibition or display over X11 full screen applications.
 * Only show options for Late cancel/Reminder in Edit Alarm dialogue when they are enabled.
 
 === Version 3.12.1 (KDE Gear 25.12.1) --- 2 December 2025 ===
