--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,9 @@
 KAlarm Change Log
 
-=== Version 3.13.0 (KDE Gear 26.04) --- 9 December 2025 ===
+=== Version 3.13.0 (KDE Gear 26.04) --- 3 January 2026 ===
 * Provide Edit Alarm dialogue option to override notification inhibition or display over X11 full screen applications.
 * Only show options for Late cancel/Reminder in Edit Alarm dialogue when they are enabled.
+* Fix date-only sub-repetition time calculations.
 
 === Version 3.12.1 (KDE Gear 25.12.1) --- 2 December 2025 ===
 * Prevent multiple Defer Alarm dialogs for the same event [KDE Bug 512828]
