--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -31,7 +31,7 @@
 </authorgroup>
 
 <copyright>
-<year>2001</year><year>2002</year><year>2003</year><year>2004</year><year>2005</year><year>2006</year><year>2007</year><year>2008</year><year>2009</year><year>2010</year><year>2011</year><year>2012</year><year>2013</year><year>2016</year><year>2018</year><year>2019</year><year>2020</year><year>2021</year><year>2022</year><year>2023</year><year>2024</year><year>2025</year>
+<year>2001</year><year>2002</year><year>2003</year><year>2004</year><year>2005</year><year>2006</year><year>2007</year><year>2008</year><year>2009</year><year>2010</year><year>2011</year><year>2012</year><year>2013</year><year>2016</year><year>2018</year><year>2019</year><year>2020</year><year>2021</year><year>2022</year><year>2023</year><year>2024</year><year>2025</year><year>2026</year>
 <holder>&David.Jarvie;</holder>
 </copyright>
 
@@ -39,7 +39,7 @@
 
 <!-- Don't change format of date and version of the documentation -->
 
-<date>2025-12-3</date>
+<date>2026-1-6</date>
 <releaseinfo>3.12.0 (KDE Gear 25.12)</releaseinfo>
 
 <abstract>
@@ -1768,20 +1768,36 @@ options:</para>
 
 <itemizedlist>
 <listitem>
+<para>For a daily recurrence, check each day in the week on which the
+alarm will be allowed to trigger. The alarm will recur at the
+specified frequency, but whenever it triggers on an unselected day of
+the week it will be suppressed.</para>
+</listitem>
+
+<listitem>
 <para>For a weekly recurrence, check each day in the week on which you
 wish to trigger the alarm.</para>
 </listitem>
 
 <listitem>
-<para>For a monthly recurrence, you may select either a fixed date, or
-a position (&eg; the second Tuesday).</para>
+<para>For a monthly recurrence, you may select either:</para>
+<itemizedlist>
+<listitem><para>A fixed day in the month or the last day of the month.
+Note that if you select for example the 31st day in the month, the
+alarm will not trigger in any month with less than 31 days.</para>
+</listitem>
+
+<listitem><para>A position in the month, &eg; the second Tuesday or
+the last Friday of the month.</para>
+</listitem>
+</itemizedlist>
 </listitem>
 
 <listitem>
 <para>For a yearly recurrence, you may select either a fixed day in
-the month, or a position in a month (&eg; the last Saturday in
-May). Check each month of the year in which you wish to trigger the
-alarm.</para>
+the month or a position in the month, as described for monthly
+recurrences. Check each month of the year in which you wish to
+trigger the alarm.</para>
 
 <para>If you set up a yearly recurrence for February 29th, you can
 specify how it is to be handled in non-leap years by selecting the
@@ -5263,11 +5279,11 @@ detailed instructions are contained in the
 &kalarm;
 </para>
 <para>
-Program copyright 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023, 2024, 2025 &David.Jarvie; &David.Jarvie.mail;
+Program copyright 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023, 2024, 2025, 2026 &David.Jarvie; &David.Jarvie.mail;
 </para>
 
 <para>
-Documentation copyright 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2016, 2018, 2019, 2020, 2021, 2022, 2023, 2024, 2025 &David.Jarvie; &David.Jarvie.mail;
+Documentation copyright 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2016, 2018, 2019, 2020, 2021, 2022, 2023, 2024, 2025, 2026 &David.Jarvie; &David.Jarvie.mail;
 </para>
 
 <!-- TRANS:CREDIT_FOR_TRANSLATORS -->
