--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,7 @@
 KAlarm Change Log
 
+=== Version 3.12.2 (KDE Gear 25.12.2) --- 8 January 2026 ===
+
 === Version 3.12.1 (KDE Gear 25.12.1) --- 2 December 2025 ===
 * Prevent multiple Defer Alarm dialogs for the same event [KDE Bug 512828]
 * If Defer is disabled for a notification alarm, don't show two Edit buttons.
