--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,7 @@
 KAlarm Change Log
 
 === Version 3.12.2 (KDE Gear 25.12.2) --- 16 January 2026 ===
-* Fix hang while loading the calendar during KAlarm startup [KDE Bug 514609]
+* Fix hang evaluating recurring date-only alarms when start-of-day time is non-zero [KDE Bug 514609]
 
 === Version 3.12.1 (KDE Gear 25.12.1) --- 2 December 2025 ===
 * Prevent multiple Defer Alarm dialogs for the same event [KDE Bug 512828]
