--- a/Changelog
+++ b/Changelog
@@ -1,11 +1,14 @@
 KAlarm Change Log
 
-=== Version 3.13.0 (KDE Gear 26.04) --- 23 January 2026 ===
+=== Version 3.13.0 (KDE Gear 26.04) --- 17 February 2026 ===
 * Provide facility to skip the next few recurrences/sub-repetitions of an alarm.
 * Provide Edit Alarm dialogue option to override notification inhibition or display over X11 full screen applications.
 * Only show options for Late cancel/Reminder in Edit Alarm dialogue when they are enabled.
 * Fix date-only sub-repetition time calculations.
 * Improve layout of late-cancel and other widgets at bottom of Edit Alarm dialogue.
+
+=== Version 3.12.3 (KDE Gear 25.12.3) --- 17 February 2026 ===
+* Fix sound files being played at the wrong volume when using VLC.
 
 === Version 3.12.2 (KDE Gear 25.12.2) --- 20 January 2026 ===
 * Fix hang evaluating recurring date-only alarms when start-of-day time is non-zero [KDE Bug 514609]
